@@ -1,102 +1,101 @@
 package ro.editii.scriptorium.web;
 
 import editii.commons.xml.DomTool;
-import editii.commons.xml.TeiDocument;
 import editii.commons.xml.XpathTool;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-import lombok.extern.java.Log;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
+import jakarta.persistence.EntityManager;
+import jakarta.servlet.ServletOutputStream;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.*;
+import lombok.extern.log4j.Log4j2;
+import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang3.time.StopWatch;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.util.MimeTypeUtils;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.server.ResponseStatusException;
 import org.springframework.web.servlet.HandlerMapping;
 import org.springframework.web.servlet.ModelAndView;
 import org.springframework.web.util.UriComponentsBuilder;
+import org.thymeleaf.spring6.view.ThymeleafViewResolver;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import ro.editii.scriptorium.Util;
 import ro.editii.scriptorium.dao.AuthorRepository;
 import ro.editii.scriptorium.dao.RelocationRepository;
 import ro.editii.scriptorium.dao.TeiDivRepository;
-import ro.editii.scriptorium.model.Author;
-import ro.editii.scriptorium.model.Relocation;
-import ro.editii.scriptorium.model.TeiDiv;
-import ro.editii.scriptorium.model.TeiFile;
+import ro.editii.scriptorium.dao.TeiFileRepository;
+import ro.editii.scriptorium.model.*;
+import ro.editii.scriptorium.rest.RestUtil;
+import ro.editii.scriptorium.service.ControllerTool;
+import ro.editii.scriptorium.service.DivService;
+import ro.editii.scriptorium.service.ElemInfo;
 import ro.editii.scriptorium.tei.TeiRepo;
 import ro.editii.scriptorium.toc.Toc;
 import ro.editii.scriptorium.xslt.XsltTool;
 
-import javax.persistence.EntityManager;
-import javax.servlet.ServletOutputStream;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.validation.constraints.Size;
 import javax.xml.transform.Transformer;
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 /**
- * "main" controller: saves bits of xml (works, chapters, divs)
+ * "main" controller: serves bits of xml (works, chapters, divs)
  */
-@Log
 @Controller
 @RequestMapping("/")
+@Log4j2
+@RequiredArgsConstructor
 public class DivController {
 
-    final static String AUTHOR_REGEX   = "/{authorId:^(?!(?:css|img|js|api|util|search|p|admin|app)$)[a-z0-9\\_]+$}";
-    final static String DIVPAGE_START_REGEX  = AUTHOR_REGEX + "/{opusId:^[a-z0-9\\_]+$}";
+    // author regex : the author must not be a list of words: css, js etc in order to allow service static content (mainly css and js)
+    // "quote" reserved for FragmentController's /quote/** route (see there).
+    final static String AUTHOR_REGEX = "/{authorId:^(?!(?:css|img|js|api|util|search|p|admin|app|v2|v3|webjars|swagger-ui|swagger-ui.html|quote|dav)$)[a-z0-9\\_]+$}";
+    final static String OPUS_REGEX = AUTHOR_REGEX + "/{opusId:^[a-z0-9\\_\\.]+$}";
 
-    final static String DIVPAGE_REGEX  = DIVPAGE_START_REGEX + "/**";
+    final static String DIVPAGE_REGEX = OPUS_REGEX + "/**";
 
-    final static String BIN_OBJ_REGEX  = DIVPAGE_START_REGEX + "/_binary/{id}";
-    final static String BIN_OBJ_REGEX2  = DIVPAGE_START_REGEX + "/*/_binary/{id}";
-    final static String BIN_OBJ_REGEX3  = DIVPAGE_START_REGEX + "/*/*/_binary/{id}";
-    final static String BIN_OBJ_REGEX4  = DIVPAGE_START_REGEX + "/*/*/*/_binary/{id}";
+    public static final String _BINARY_MARK = "_binary";
 
-    static Transformer TEIDIV_TO_HTML_XSLT;
+    public static final String BINARY_OBJECT = "binaryObject";
+    public static final String XML_ID = "xml:id";
 
-    static {
-        URL xsltResource = DivController.class.getClassLoader().getResource("xslt/teidiv2html.xsl");
-        try {
-            TEIDIV_TO_HTML_XSLT = XsltTool.getTransformer(xsltResource.openStream(), "xslt/teidiv2html.xsl");
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
+    public static final String EXT_TXT = "txt";
+    public static final String EXT_JSON = "json";
+    public static final String EXT_XML = "xml";
+    public static final String EXT_HTML = "html";
 
+    protected static final String XSLT_TEIDIV_2_HTML_XSL = "xslt/teidiv2html.xsl";
+    protected static final String XSLT_XML_TO_JSON_XSL = "xslt/xml-to-json.xsl";
 
-    @Autowired
-    AuthorRepository authorRepository;
+    static ThreadLocal<Transformer> TRANSFORMERS_TEIDIV2HTML = ThreadLocal.withInitial(() -> Util.getTransformer(XSLT_TEIDIV_2_HTML_XSL));
 
-    @Autowired
-    TeiDivRepository teiDivRepository;
+    static ThreadLocal<Transformer> TRANSFORMERS_TEIDIV2JSON = ThreadLocal.withInitial(() -> Util.getTransformer(XSLT_XML_TO_JSON_XSL));
 
-    @Autowired
-    RelocationRepository relocationRepository;
-
-    @Autowired
-    EntityManager em;
-
-    @Autowired
-    TeiRepo teiRepo;
-
+    final AuthorRepository  authorRepository;
+    final TeiFileRepository teiFileRepository;
+    final TeiDivRepository  teiDivRepository;
+    final DivService        divService;
+    final RelocationRepository relocationRepository;
+    final EntityManager     em;
+    final TeiRepo           teiRepo;
+    final ThymeleafViewResolver viewResolver;
 
     @GetMapping("/")
+    @Transactional
     public String index(Model model) {
-        LOG.debug("public String index(Model model)");
-        List<Author> all = this.authorRepository
+        final List<Author> all = this.authorRepository
                 .findAll().stream()
                 .sorted()
                 .collect(Collectors.toList());
@@ -104,22 +103,19 @@ public class DivController {
         return "index";
     }
 
-    @GetMapping(value = { BIN_OBJ_REGEX, BIN_OBJ_REGEX2, BIN_OBJ_REGEX3, BIN_OBJ_REGEX4})
-    public void binaryObject(HttpServletResponse httpServletResponse,
-                             @PathVariable String authorId,
-                             @PathVariable String opusId,
-                             @PathVariable String id ) {
+    protected void binaryObject(HttpServletResponse httpServletResponse,
+             String authorId, String opusId, String id) {
         try {
-            final TeiDiv op = this.getOpus(authorId, opusId);
-            final Node rootNode = op.getNode();
-            TeiDocument tei = new TeiDocument(rootNode);
-            byte[] binaryObject = tei.getBinaryObject(id);
+
+            final byte[] binaryObject  = this.divService.getBinaryObject(authorId, opusId, id);
+
             httpServletResponse.addHeader(HttpHeaders.CONTENT_TYPE, "image/jpeg");
-            ServletOutputStream outputStream = httpServletResponse.getOutputStream();
+            final ServletOutputStream outputStream = httpServletResponse.getOutputStream();
             outputStream.write(binaryObject);
             outputStream.flush();
             outputStream.close();
         } catch (IOException | IllegalArgumentException e) {
+            log.error(e);
             writeErrorToHttpServletResp(httpServletResponse, e, HttpStatus.INTERNAL_SERVER_ERROR.value());
         }
     }
@@ -133,116 +129,343 @@ public class DivController {
         }
     }
 
-    // author page : the author must not be a list of words: css, js etc in order to allow service static content (mainly css and js)
     @GetMapping(AUTHOR_REGEX)
-    public ModelAndView author(
-            @PathVariable String authorId,
+    @Transactional
+    public ModelAndView get_authorId(
+            @PathVariable(name = "authorId") String authorId,
             Model model,
-            UriComponentsBuilder uriComponentsBuilder)
-    {
+            UriComponentsBuilder uriComponentsBuilder,
+            HttpServletRequest httpServletRequest) {
 
-        Author author = this.retrieveAuthor(authorId);
+        final Author author = this.retrieveAuthor(authorId);
         model.addAttribute("author", author);
 
-
-        List<TeiFile> listTeiFiles = this.em
-                .createQuery("select tf from TeiFile tf " +
-                        " join tf.authors a " +
-                        " where a.strId = :authId", TeiFile.class)
-                .setParameter("authId", authorId)
-                .getResultList();
-
+        final List<TeiFile> listTeiFiles = this.teiFileRepository.getTeiFilesForAuthorStrId(authorId);
 
         model.addAttribute("listTeiFiles", listTeiFiles);
-        for (TeiFile tf : listTeiFiles ) {
-            LOG.info(tf.toString());
-        }
-        LOG.debug(">> tei files: " + listTeiFiles);
 
-        List<TeiDiv> rootDivs = this.teiDivRepository
+        final List<TeiDiv> rootDivs = this.teiDivRepository
                 .findOperaForAuthorStrId(authorId)
-                .stream().sorted().collect(Collectors.toList());
-
-        LOG.debug(">> root divs: " + rootDivs);
+                .stream().sorted().toList();
 
         model.addAttribute("rootDivs", rootDivs);
 
-        String thisUrl = uriComponentsBuilder
+        final String thisUrl = uriComponentsBuilder
                 .path("/{author}")
                 .buildAndExpand(author.getStrId())
                 .toUriString();
 
         model.addAttribute("thisUrl", thisUrl);
+        model.addAttribute("requestUri", httpServletRequest.getRequestURI());
 
-        ModelAndView mv = new ModelAndView("author");
+        final ModelAndView mv = new ModelAndView("author");
         mv.getModel().putAll(model.asMap());
         return mv;
     }
 
+    /**
+     * catch-all dispatcher for urls like: /{author}/{opus}/div1/div2/div3.ext
+     */
+    @GetMapping(value = { OPUS_REGEX, DIVPAGE_REGEX })
+    @Transactional
+    public void catchAllDivDispatcher(@PathVariable(name = "authorId") String authorId,
+                                       @PathVariable(name = "opusId") String opusId,
+                                       HttpServletRequest request,
+                                       HttpServletResponse response,
+                                       Model model,
+                                       UriComponentsBuilder uriComponentsBuilder) {
 
+        final var path = Util.urlDecode((String) request.getAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE));
+        final var fragms = Util.pathFragments(path);
 
-    // div page for browser as html
-    @GetMapping(value = DIVPAGE_REGEX, produces = "text/html")
-    public String teiDivAsHtml(@PathVariable String authorId,
-                               @PathVariable String opusId,
-                               HttpServletRequest request,
-                               Model model,
-                               UriComponentsBuilder uriComponentsBuilder) {
+        assert fragms.length >= 2;
+        assert authorId.equals(fragms[0]);
+        assert opusId.equals(fragms[1]);
 
-        DivInfo divInfo = this._getTeiDiv(authorId, opusId, model, request, uriComponentsBuilder);
-        Node selectedDiv = divInfo.getNode();
-        final XpathTool xt = new XpathTool(selectedDiv);
-        NodeList subdivs = xt.applyXpathForNodeSet("tei:div");
-        if (subdivs.getLength() > 0) {
-            for (int i = 0; i < subdivs.getLength(); i++)
-                selectedDiv.removeChild(subdivs.item(i));
+        final var binaryObjId = this.isBinaryObjectReq(fragms);
+        if (binaryObjId != null) {
+            // request of binaryObject
+            this.binaryObject(response, authorId, opusId, binaryObjId);
+            return;
         }
 
+        final var lastFragm = fragms[fragms.length - 1];
+        final var extension = Util.getExtension(lastFragm);
+        final var accept = request.getHeader(HttpHeaders.ACCEPT);
+
+        try {
+            // text was specifically requested either by extension or by Accept accept
+            if (EXT_TXT.equals(extension) || MimeTypeUtils.TEXT_PLAIN_VALUE.equals(accept)) {
+                this.requestForTxt(authorId, request, response,  uriComponentsBuilder);
+            } else
+            if (EXT_JSON.equals(extension) || MimeTypeUtils.APPLICATION_JSON_VALUE.equals(accept)) {
+                this.requestForJson(authorId, request, response, uriComponentsBuilder);
+            } else
+            if (EXT_XML.equals(extension) || MimeTypeUtils.TEXT_XML_VALUE.equals(accept)) {
+                this.requestForXml(authorId, request, response, uriComponentsBuilder);
+            } else
+            if (EXT_HTML.equals(extension)) {
+                // on .html extension, serve undecorated html
+                this.requestForUndecoratedHtml(authorId,  request, response, uriComponentsBuilder);
+            } else {
+                // default to decorated html
+                this.requestForDecoratedHtml(authorId, opusId, request, response, model, uriComponentsBuilder);
+            }
+        } catch (ResponseStatusException e) {
+            throw e;
+        } catch (ResourceNotFoundException e) {
+            RestUtil.throw404(e.getMessage());
+        } catch (IllegalArgumentException e) {
+            RestUtil.throw400(e.getMessage());
+        } catch (Exception e) {
+            log.error(e, e);
+            RestUtil.throw500(e);
+        }
+    }
+
+    /**
+     * @param fragms
+     * @return non-null only if path fragms contain the '_binary' marker,(returns the next fragm(the binobj id)
+     */
+    private String isBinaryObjectReq(String[] fragms) {
+
+        for (int i = 2; i < fragms.length; i++) {
+            // count starts at 2 since first two elements (author and opusid) cannot be '_binary'
+            final var crt = fragms[i];
+            if (_BINARY_MARK.equals(crt)) {
+                if (i + 1 == fragms.length) {
+                    throw new IllegalArgumentException("expected binary id immediately after the _binary marker");
+                }
+                return fragms[i + 1];
+            }
+        }
+        return null;
+    }
+
+    private record ElemInfoAndText(ElemInfo elemInfo, String text) {}
+
+    protected ElemInfoAndText _teiDivAsUndecoratedHtml(String authorId,
+                                                      HttpServletRequest request,
+                                                      UriComponentsBuilder uriComponentsBuilder) {
+        final ElemInfo elemInfo = this.getElemInfo(authorId, request, uriComponentsBuilder);
+
+        // remove sub-chapters
+        Util.removeDivChildren(elemInfo);
+
+        final Node selectedDiv = elemInfo.getNodeCopy();
+
+        // ../../..
+        final var relativeRoot = elemInfo.getTeiElem().getRelativeRoot();
+
+        final var text = XsltTool.apply(getTei2HtmlTransformer(), selectedDiv,
+                Map.of(
+                        "requestURI", request.getRequestURI(),
+                        "author", elemInfo.getAuthor().getVisualName(),
+                        "relativeRoot", relativeRoot
+                ));
+
+        return new ElemInfoAndText(elemInfo,  text);
+    }
+
+
+    @Transactional
+    public void requestForUndecoratedHtml(@PathVariable String authorId,
+                                          HttpServletRequest request,
+                                          HttpServletResponse response,
+                                          UriComponentsBuilder uriComponentsBuilder) {
+        final StopWatch watch = new StopWatch();
+        watch.start();
+        final var stuff = this._teiDivAsUndecoratedHtml(authorId, request, uriComponentsBuilder);
+
+        response.addHeader(HttpHeaders.CONTENT_TYPE, MimeTypeUtils.TEXT_HTML_VALUE + "; charset=utf-8");
+        response.setCharacterEncoding(StandardCharsets.UTF_8.name());
+
+        try {
+            IOUtils.write(stuff.text, response.getOutputStream());
+            response.getOutputStream().flush();
+            response.getOutputStream().close();
+
+            watch.stop();
+        } catch (IOException e) {
+            log.error(e, e);
+            RestUtil.throw500(e);
+        }
+    }
+
+
+    @Transactional
+    public void requestForDecoratedHtml(@PathVariable String authorId,
+                                        @PathVariable String opusId,
+                                        HttpServletRequest request,
+                                        HttpServletResponse response,
+                                        Model model,
+                                        UriComponentsBuilder uriComponentsBuilder) {
+
+        final StopWatch watch = new StopWatch();
+        watch.start();
+
+        final var opusIdNoExt = Util.basename(opusId); // eliminate extension if any
+
+        final var elemInfoAndText = this._teiDivAsUndecoratedHtml(authorId, request, uriComponentsBuilder);
+        final var ucb = Util.cloneUriComponentBuilder(uriComponentsBuilder, request);
+
+        final var relativeRoot = elemInfoAndText.elemInfo.getTeiElem().getRelativeRoot();
+
+        model.addAttribute("author", elemInfoAndText.elemInfo.getAuthor());
+        model.addAttribute("relativeRoot", relativeRoot);
+        model.addAttribute("featuredImage", this.getFeaturedImage(
+                elemInfoAndText.elemInfo.getNodeCopy(), ucb, authorId, opusIdNoExt));
+        model.addAttribute("text", elemInfoAndText.text);
+        model.addAttribute("requestUri", request.getRequestURI());
+
+        final var elem = elemInfoAndText.elemInfo.getTeiElem();
+
+        {
+            // 3,5 : breadcrumb
+            final List<TeiElem> breadcrumb  = elem.getBreadcrumb();
+            model.addAttribute("breadcrumb", breadcrumb);
+        }
+
+        final TeiDiv op = this.em.merge(elem.getOpus());
+        final TeiDiv div = this.em.merge(elem.getDiv());
+        op.setTeiRepo(this.teiRepo);
+        div.setTeiRepo(this.teiRepo);
+
+        model.addAttribute("op", op);
+
+        {
+
+            // 4. get content of identified div and spit it out
+            final List<TeiElem> children = elemInfoAndText.elemInfo.getChildren();
+            final Toc toc = this.divService.getToc(op.getId());
+            model.addAttribute("elem", elem);
+            model.addAttribute("div", div);
+            model.addAttribute("prev", toc.prev(div));
+            model.addAttribute("next", toc.next(div));
+            model.addAttribute("children", children);
+         }
+
+        // 5. language, license and sourceDesc
+        {
+            final String language = div.getTeiLanguage();
+            final String license = div.getLicense();
+
+            String sourceDesc = "";
+            {
+                final Node node_source_desc = div.getSourceDesc();
+                if (node_source_desc != null)
+                    sourceDesc = XsltTool.apply(getTei2HtmlTransformer(), node_source_desc, Map.of("baseUrl", request.getRequestURI()));
+            }
+
+            if (language != null && !language.trim().isEmpty())
+                model.addAttribute("language", language);
+
+            if (license != null && !license.trim().isEmpty())
+                model.addAttribute("license", license);
+
+            if (sourceDesc != null && !sourceDesc.trim().isEmpty())
+                model.addAttribute("source", sourceDesc);
+        }
+
+        watch.stop();
+
+        try {
+            this.viewResolver
+                    .resolveViewName("teidiv", Locale.getDefault())
+                    .render(model.asMap(), request, response);
+        } catch (Exception e) {
+            RestUtil.throw500(e);
+        }
+    }
+
+    // raw div as tei xml
+    @Transactional
+    public void requestForXml(String authorId,
+                              HttpServletRequest request,
+                              HttpServletResponse response,
+                              UriComponentsBuilder uriComponentsBuilder) throws IOException {
+        final ElemInfo elemInfo = this.getElemInfo(authorId, request, uriComponentsBuilder);
+
+        Util.removeDivChildren(elemInfo);
+        final Node selectedDiv = elemInfo.getNodeCopy();
+
+        response.addHeader(HttpHeaders.CONTENT_TYPE, MimeTypeUtils.TEXT_XML_VALUE + "; charset=utf-8");
+
+        DomTool.serialize(selectedDiv, response.getOutputStream());
+    }
+
+
+    final ControllerTool controllerTool;
+
+    @Transactional
+    public void requestForTxt(String authorId,
+                              HttpServletRequest request,
+                              HttpServletResponse response,
+                              UriComponentsBuilder uriComponentsBuilder) throws IOException {
+
+        final ElemInfo elemInfo = this.getElemInfo(authorId, request, uriComponentsBuilder);
+
+        this.controllerTool.teiElemToText(elemInfo, response);
+
+    }
+
+    @Transactional
+    public void requestForJson(@PathVariable String authorId,
+                               HttpServletRequest request,
+                               HttpServletResponse response,
+                               UriComponentsBuilder uriComponentsBuilder) throws IOException {
+        final ElemInfo elemInfo = this.getElemInfo(authorId, request, uriComponentsBuilder);
+
+        Util.removeDivChildren(elemInfo);
+        final Node selectedDiv = elemInfo.getNodeCopy();
+
+        response.setCharacterEncoding(StandardCharsets.UTF_8.name());
+        response.addHeader(HttpHeaders.CONTENT_TYPE, MimeTypeUtils.APPLICATION_JSON_VALUE + "; charset=utf-8");
+
+        final var transf  = this.getTei2JsonTransformer();
+        XsltTool.apply(transf, selectedDiv,
+                response.getOutputStream(),
+                Map.of(
+                        "use-rabbitfish", "true"
+                ));
+    }
+
+    /**
+     * @return uses the TRANSFORMERS ThreadLocal to return a unique Transformer per thread
+     */
+    protected Transformer getTei2HtmlTransformer() { return TRANSFORMERS_TEIDIV2HTML.get(); }
+
+    protected Transformer getTei2JsonTransformer() { return TRANSFORMERS_TEIDIV2JSON.get(); }
+
+    private String getFeaturedImage(Node divNode, UriComponentsBuilder ucb, String authorId, String opusId) {
+        final XpathTool xt = new XpathTool(divNode);
         String featuredImage = null;
         // a featured image for this div?
-        //NodeList anyImages = xt.applyXpathForNodeSet(".//binaryObject");
-        List<Node> anyImages = new ArrayList<>();
+        final List<Node> anyImages = new ArrayList<>();
         xt.visit((Node n) -> {
-                    if ("binaryObject".equals(n.getNodeName()))
-                        anyImages.add(n);
-                        return n;
-                });
-        if (anyImages.size() > 0) {
-            final Node node = anyImages.get(0);// take first image
-            final Node idAttrNode = node.getAttributes().getNamedItem("xml:id");
+            if (BINARY_OBJECT.equals(n.getNodeName()))
+                anyImages.add(n);
+            return n;
+        });
+        if (!anyImages.isEmpty()) {
+            final Node imageNode = anyImages.get(0);// take first image
+            final Node idAttrNode = imageNode.getAttributes().getNamedItem(XML_ID);
             if (idAttrNode != null) {
                 final String imageId = idAttrNode.getNodeValue();
-                featuredImage = Util.cloneUriComponentBuilder(uriComponentsBuilder, request)
+                featuredImage = ucb
                         .path(authorId)
                         .path("/" + opusId)
-                        .path("/_binary/" + imageId)
+                        .path("/" + _BINARY_MARK + "/" + imageId)
                         .toUriString();
             }
         }
         if (featuredImage == null) {
             featuredImage = getRandomImageUrl();
         }
-        model.addAttribute("featuredImage", featuredImage);
 
-        // ../../..
-        String relativeRoot = IntStream.range(0, divInfo.getTeiDiv().getDepth())
-                .mapToObj(it -> "..")
-                .collect(Collectors.joining("/"));
-        if (relativeRoot.length() > 0) relativeRoot = "/" + relativeRoot;
-
-        String res = XsltTool.apply(TEIDIV_TO_HTML_XSLT, selectedDiv,
-                Map.of(
-                "requestURI", request.getRequestURI(),
-                "author", divInfo.getAuthor().getVisualName(),
-                "relativeRoot", relativeRoot
-                ));
-
-        LOG.debug("text size:" + res.length());
-        model.addAttribute("text", res);
-
-        return "teidiv";
-
+        return featuredImage;
     }
+
 
     private String getRandomImageUrl() {
         final List<String> urls = imageUrls();
@@ -250,233 +473,79 @@ public class DivController {
         return urls.get(i);
     }
 
-    // raw div as tei xml
-    // @GetMapping(value = DIVPAGE_REGEX, produces = "application/xml")
-    public void teiDivAsXml(@PathVariable String authorId,
-                            @PathVariable String opusId,
-                            HttpServletRequest request,
-                            HttpServletResponse response,
-                            Model model,
-                            UriComponentsBuilder uriComponentsBuilder) throws IOException {
-        Node selectedDiv = this._getTeiDiv(authorId, opusId, model, request, uriComponentsBuilder).getNode();
-
-        DomTool.serialize(selectedDiv, response.getOutputStream());
-    }
 
     protected Author retrieveAuthor(String authorStrId) {
-        Author author;
-        List<Author> authors = this.authorRepository.findByStrId(authorStrId);
+        final List<Author> authors = this.authorRepository.findByStrId(authorStrId);
         if (authors != null && authors.size() == 1) {
-            author = authors.get(0);
-        } else
+            return authors.iterator().next();
+        } else {
             throw new ResourceNotFoundException(String.format("no author for id [%s]", authorStrId));
-
-        return author;
+        }
     }
 
 
-    /**
-     *
-     */
-    protected DivInfo _getTeiDiv(final String authorId, String opusId,
-                                 Model model, HttpServletRequest request,
-                                 UriComponentsBuilder uriComponentsBuilder) {
+    protected ElemInfo getElemInfo(final String authorId,
+                                   HttpServletRequest request,
+                                   UriComponentsBuilder uriComponentsBuilder) {
 
-        DivInfo.DivInfoBuilder respBuilder = DivInfo.builder();
+        final StopWatch watch = new StopWatch();
+        watch.start();
+
+        final ElemInfo.ElemInfoBuilder resp = ElemInfo.builder();
         // 1. get author /author
-
-        Author author;
-
-        {
-            author = this.retrieveAuthor(authorId);
-
-            LOG.debug(">> " + author);
-            model.addAttribute("author", author);
-            respBuilder.author(author);
-
-        }
+        resp.author(this.retrieveAuthor(authorId));
 
         // 2. get root div aka opusId /author/opusId
 
-        TeiDiv op = this.getOpus(authorId, opusId);
-        model.addAttribute("op", op);
+        final String pathRequestAttribute = (String) request.getAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE);
+        final String pathNoExt = Util.basename(Util.urlDecode(pathRequestAttribute));
 
-        TeiDiv div = op;
+        checkRelocation(pathNoExt, uriComponentsBuilder);
 
-        // 3. iterative : for each div: div1,div2,div3 from /author/opusId/div1/div2/div3
+        final TeiElem elem = this.divService.getByPath(pathNoExt);
+        resp.teiElem(elem);
 
-        {
-            final String _path = (String) request.getAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE);
-            LOG.info(_path);
+        final var children = elem.getDbChildren();
+        if (children != null && children.iterator().hasNext())
+            children.iterator().next(); // init lazy proxy
 
-            checkRelocation(_path, uriComponentsBuilder);
-
-            String beginningOfUrl = String.format("/%s/%s", authorId, opusId);
-            if (! _path.startsWith(beginningOfUrl))
-                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, String.format("expected url to start with %s", beginningOfUrl));
-
-            String endPartOfUrl = _path.substring(beginningOfUrl.length());
-            if (endPartOfUrl.startsWith("/"))
-                endPartOfUrl = endPartOfUrl.substring(1);
-
-            if (endPartOfUrl.length() > 0) {
-                String[] splits = endPartOfUrl.split("/");
-                LOG.debug(String.format("%d splits : %s", splits.length, Arrays.toString(splits)));
-
-                for (String fragm: splits) {
-                    if ("".equals(fragm.trim()))
-                        continue;
-
-                    List<TeiDiv> children = div.getChildren();
-
-                    List<TeiDiv> filtered = children.stream().filter(it -> fragm.equals(it.getUrlFragment())).collect(Collectors.toList());
-                    if (filtered.size() < 1) {
-                        // none found by name: maybe fragm is not a fragment name but only its number
-                        try {
-                            int splitAsInt = Integer.parseInt(fragm);
-                            if (splitAsInt >= children.size())
-                                throw new RuntimeException(String.format("fragment nr %d is bigger than total number of children %d", splitAsInt, children.size()));
-
-                            TeiDiv child = children.get(splitAsInt);
-                            child.setTeiRepo(this.teiRepo);
-                            div = child;
-                        } catch (NumberFormatException e) {
-                            throw new ResponseStatusException(HttpStatus.NOT_FOUND, String.format("no div found named [%s] under [%s]", fragm, beginningOfUrl));
-                        }
-                    } else if (filtered.size() > 1) {
-                        throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, String.format("several (%d) divs found named [%s] under [%s]", filtered.size(), fragm, beginningOfUrl));
-                    } else {
-                        TeiDiv child = filtered.get(0);
-                        child.setTeiRepo(this.teiRepo);
-                        div = child;
-                    }
-                }
-            }
-        }
-        respBuilder.teiDiv(div);
+        resp.children(children);
 
         {
-            // 3,5 : get breadcrumb
-
-            List<TeiDiv> breadcrumb = new ArrayList<>();
-            TeiDiv divIt = div;
-            while (divIt != null) {
-                breadcrumb.add(divIt);
-                divIt = divIt.getParent();
-            }
-            Collections.reverse(breadcrumb);
-            model.addAttribute("breadcrumb", breadcrumb);
-        }
-
-        // 4. get content of identified div and spit it out
-
-        List<TeiDiv> children = div.getChildren();
-
-        Toc toc = new Toc(div.getOpus());
-        model.addAttribute("div", div);
-        model.addAttribute("prev", toc.prev(div));
-        model.addAttribute("next", toc.next(div));
-        model.addAttribute("children", children);
-
-        respBuilder.children(children);
-
-        {
-            Node selectedDiv = div.getNode(); // nodeList.item(0);
-
-            // 5. language, license and sourceDesc
-
-            String language = div.getLanguage();
-            String license = div.getLicense();
-
-            String sourceDesc = "";
-            {
-                Node node_source_desc = div.getSourceDesc();
-                if (node_source_desc !=null )
-                    sourceDesc = XsltTool.apply(TEIDIV_TO_HTML_XSLT, node_source_desc, Map.of("baseUrl", request.getRequestURI()));
-            }
-
-            if (language != null && !"".equals(language.trim()))
-                    model.addAttribute("language", language);
-
-            if (license != null && ! "".equals(license.trim()))
-                model.addAttribute("license", license);
-
-            if (sourceDesc != null && ! "".equals(sourceDesc.trim()))
-                model.addAttribute("source", sourceDesc);
+            final Node selectedDiv = this.divService.getNode(elem);
 
             final Node deepCopy = DomTool.deepCopy(selectedDiv);
-            respBuilder.node(deepCopy);
-
-            return respBuilder.build();
+            resp.nodeCopy(deepCopy);
         }
+
+        watch.stop();
+        log.info("{}, took {}", pathNoExt, watch);
+
+        return resp.build();
     }
 
+
     protected void checkRelocation(String path, UriComponentsBuilder uriComponentsBuilder) {
-        Optional<Relocation> byId = this.relocationRepository.findById(path);
+        final Optional<Relocation> byId = this.relocationRepository.findById(path);
         if (byId.isPresent()) {
             throw new RelocationException(uriComponentsBuilder, byId.get().getNewPath());
         }
     }
 
-    private TeiDiv getOpus(String authorId, String opusId) {
-        List<TeiDiv> opera = this.teiDivRepository.findOperaForAuthorStrId(authorId);
-
-        opera = opera.stream().filter( teidiv -> teidiv.getUrlFragment().equals(opusId)).collect(Collectors.toList());
-
-        LOG.debug(String.format("%d opera for author %s", opera.size(), opera));
-        if (opera.size() < 1)
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, String.format("no opus for [%s/%s]", authorId, opusId));
-
-        if (opera.size() > 1)
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, String.format("several (%d) divs correspond to this url (%s), expected exactly 1", opera.size(), opusId));
-
-        final TeiDiv op = opera.get(0);
-        op.setTeiRepo(this.teiRepo);
-        return op;
-    }
-
-
-    @GetMapping("/search")
-    public String search(@RequestParam @Size(min = 3) String q, Model model) {
-        q = q.trim();
-        model.addAttribute("q", q);
-        
-        if (q.length() >= 3) {
-            List<Author> lastnames = this.authorRepository.findByLastNameContainingIgnoreCase(q);
-            List<Author> firstnames = this.authorRepository.findByFirstNameContainingIgnoreCase(q);
-    
-            List<Author> authors = new ArrayList<>();
-            authors.addAll(lastnames);
-            authors.addAll(firstnames);
-    
-            List<TeiDiv> divs = this.teiDivRepository.findByHeadContainingIgnoreCase(q);
-    
-            model.addAttribute("authors", authors);
-            model.addAttribute("divs", divs);    
-        }
-
-        return "search";
-    }
 
     static List<String> IMAGE_URLS = null;
+
     synchronized static List<String> imageUrls() {
         if (IMAGE_URLS != null)
             return IMAGE_URLS;
 
-        IMAGE_URLS = new ArrayList<>(Util.readTextFileWithComments(DivController.class.getClassLoader().getResourceAsStream("beautiful-images.txt")));
-        IMAGE_URLS = IMAGE_URLS.stream().map(String::trim).collect(Collectors.toList());
+        final var urls = new ArrayList<>(Util.readTextFileWithComments(DivController.class.getClassLoader().getResourceAsStream("beautiful-images.txt")));
+        IMAGE_URLS = urls.stream().map(String::trim).toList();
         return IMAGE_URLS;
     }
-    static Logger LOG = LoggerFactory.getLogger(DivController.class);
+
 }
 
-@Data @AllArgsConstructor @NoArgsConstructor @Builder
-class DivInfo {
-    TeiDiv  teiDiv;
-    List<TeiDiv> children;
-    Node    node;
-    Author  author;
-}
 
 @ResponseStatus(HttpStatus.MOVED_PERMANENTLY)
 class RelocationException extends ResponseStatusException {
@@ -484,6 +553,7 @@ class RelocationException extends ResponseStatusException {
     private final String path;
 
     UriComponentsBuilder uriComponentsBuilder;
+
     public RelocationException(UriComponentsBuilder uriComponentsBuilder, String newPath) {
         super(HttpStatus.MOVED_PERMANENTLY);
         this.uriComponentsBuilder = uriComponentsBuilder;
@@ -491,9 +561,9 @@ class RelocationException extends ResponseStatusException {
     }
 
     @Override
-    public HttpHeaders getResponseHeaders() {
-        HttpHeaders resp = new HttpHeaders();
-        resp.addAll(super.getResponseHeaders());
+    public HttpHeaders getHeaders() {
+        final HttpHeaders resp = new HttpHeaders();
+        resp.addAll(super.getHeaders());
         resp.set(HttpHeaders.LOCATION, uriComponentsBuilder.path(this.path).toUriString());
         return resp;
     }
